corpus/structs.txt
======
Empty struct
======

struct A {}

---

(program
	(struct_declaration (identifier)))

======
Public struct
======

public struct A {}

---

(program
	(struct_declaration (modifier) (identifier)))
