corpus/types.txt
======
Array type
======

let foo: [String]
var bar: Array<Int>
let biz: [FooType]

---

(program
  (constant_declaration
    name: (identifier)
    type: (array_type (standard_type)))
  (variable_declaration
    name: (identifier)
    type: (array_type (standard_type)))
  (constant_declaration
    name: (identifier)
    type: (array_type (type_identifier))))

======
Array type with initialization
======

let ints: [Int] = [
  0, 1, 2, 3, 4, 5
]
var mixed = [
  0, Foo, 2, "Three", 4, "Five"
]
var foo: [AnyHashable] = [ ]

---

(program
  (constant_declaration
    name: (identifier)
    type: (array_type (standard_type))
    value: (array (number) (number) (number) (number) (number) (number)))
  (variable_declaration
    name: (identifier)
    value: (array (number) (identifier) (number) (string) (number) (string)))
  (variable_declaration
    name: (identifier)
    type: (array_type (type_identifier))
    value: (array)))

======
Dictionary type
======

let foo: Dictionary<String, String>
var foo: [Int: AnyHashable]
let foo: [AnyHashable: Any]

---

(program
  (constant_declaration
    name: (identifier)
    type: (dictionary_type (standard_type) (standard_type)))
  (variable_declaration
    name: (identifier)
    type: (dictionary_type (standard_type) (type_identifier)))
  (constant_declaration
    name: (identifier)
    type: (dictionary_type (type_identifier) (type_identifier))))

======
Dictionary type with initialization
======

var strings: Dictionary<String, String> = [ "Foo" : "Bar" ]
let numbers = [
    0: "Zero",
    1: "One",
    2: "Two"
]
var foo: [AnyHashable: Any] = [ : ]

---

(program
  (variable_declaration
    name: (identifier)
    type: (dictionary_type (standard_type) (standard_type))
    value: (dictionary (string) (string)))
  (constant_declaration
    name: (identifier)
    value: (dictionary (number) (string) (number) (string) (number) (string)))
  (variable_declaration
    name: (identifier)
    type: (dictionary_type (type_identifier) (type_identifier))
    value: (dictionary)))
